--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
     />
+    <link href="static/css/responsive-calendar.css" rel="stylesheet" />
     <!--
     <link
       rel="stylesheet"
@@ -19,12 +20,12 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <!--
+    <script src="static/js/jquery.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
       integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
       crossorigin="anonymous"
     ></script>
-    -->
+    <script src="static/js/responsive-calendar.js"></script>
   </body>
 </html>
